[gd_scene load_steps=81 format=2]

[ext_resource path="res://niveis/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://nivel-1.gd" type="Script" id=2]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0009.png" type="Texture" id=3]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0014.png" type="Texture" id=4]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0000.png" type="Texture" id=5]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0006.png" type="Texture" id=6]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0014.png" type="Texture" id=7]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0007.png" type="Texture" id=8]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0009.png" type="Texture" id=9]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0003.png" type="Texture" id=10]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0019.png" type="Texture" id=11]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0008.png" type="Texture" id=12]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0013.png" type="Texture" id=13]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0016.png" type="Texture" id=14]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0005.png" type="Texture" id=15]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0001.png" type="Texture" id=16]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0005.png" type="Texture" id=17]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0000.png" type="Texture" id=18]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0003.png" type="Texture" id=19]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0002.png" type="Texture" id=20]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0018.png" type="Texture" id=21]
[ext_resource path="res://mapas/sala(1).png" type="Texture" id=22]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0011.png" type="Texture" id=23]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0012.png" type="Texture" id=24]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0001.png" type="Texture" id=25]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0017.png" type="Texture" id=26]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0015.png" type="Texture" id=27]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0002.png" type="Texture" id=28]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0011.png" type="Texture" id=29]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0012.png" type="Texture" id=30]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0007.png" type="Texture" id=31]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0015.png" type="Texture" id=32]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0006.png" type="Texture" id=33]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0008.png" type="Texture" id=34]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0004.png" type="Texture" id=35]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0010.png" type="Texture" id=36]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0004.png" type="Texture" id=37]
[ext_resource path="res://sprites/movimento/criança andando0002.png" type="Texture" id=38]
[ext_resource path="res://sprites/movimento/criança andando0001.png" type="Texture" id=39]
[ext_resource path="res://sprites/movimento/criança andando0006.png" type="Texture" id=40]
[ext_resource path="res://mapas/mesa.png" type="Texture" id=41]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0001.png" type="Texture" id=42]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0007.png" type="Texture" id=43]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0003.png" type="Texture" id=44]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0011.png" type="Texture" id=45]
[ext_resource path="res://sprites/movimento/criança andando0000.png" type="Texture" id=46]
[ext_resource path="res://sprites/movimento/criança andando0003.png" type="Texture" id=47]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0005.png" type="Texture" id=48]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0002.png" type="Texture" id=49]
[ext_resource path="res://sprites/movimento/criança andando0007.png" type="Texture" id=50]
[ext_resource path="res://sprites/movimento/criança andando0005.png" type="Texture" id=51]
[ext_resource path="res://sprites/movimento/criança andando0004.png" type="Texture" id=52]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0010.png" type="Texture" id=53]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0000.png" type="Texture" id=54]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0006.png" type="Texture" id=55]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0009.png" type="Texture" id=56]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0004.png" type="Texture" id=57]
[ext_resource path="res://sprites/lendo/criança lendo/criança lendo0012.png" type="Texture" id=58]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0008.png" type="Texture" id=59]
[ext_resource path="res://sprites/movimento/criança parada.png" type="Texture" id=60]
[ext_resource path="res://sprites/lendo/criança lendo desatenta/criança distraída0010.png" type="Texture" id=61]
[ext_resource path="res://sprites/lendo/criança lendo hiperativa/criança agitada0013.png" type="Texture" id=62]
[ext_resource path="res://sprites/Instrutor/doutor positivo.png" type="Texture" id=63]
[ext_resource path="res://DialogBox.gd" type="Script" id=64]
[ext_resource path="res://mapas/realBalao.png" type="Texture" id=65]
[ext_resource path="res://realBalao.gd" type="Script" id=66]
[ext_resource path="res://mapas/corpo.png" type="Texture" id=67]
[ext_resource path="res://mapas/ilustracao-da-lousa-verde_69037-26.jpg" type="Texture" id=68]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 59 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 20 ), ExtResource( 10 ), ExtResource( 25 ), ExtResource( 37 ), ExtResource( 9 ), ExtResource( 29 ), ExtResource( 24 ), ExtResource( 62 ), ExtResource( 27 ), ExtResource( 36 ), ExtResource( 4 ) ],
"loop": true,
"name": "lendo-agitado",
"speed": 5.0
}, {
"frames": [ ExtResource( 60 ) ],
"loop": true,
"name": "parado",
"speed": 5.0
}, {
"frames": [ ExtResource( 54 ), ExtResource( 42 ), ExtResource( 49 ), ExtResource( 44 ), ExtResource( 57 ), ExtResource( 48 ), ExtResource( 55 ), ExtResource( 43 ), ExtResource( 12 ), ExtResource( 56 ), ExtResource( 53 ), ExtResource( 45 ), ExtResource( 58 ) ],
"loop": true,
"name": "sentado",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 5 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 19 ), ExtResource( 28 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 3 ), ExtResource( 23 ), ExtResource( 61 ), ExtResource( 13 ), ExtResource( 30 ), ExtResource( 13 ), ExtResource( 7 ) ],
"loop": true,
"name": "lendo-desatento",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 38 ), ExtResource( 47 ), ExtResource( 52 ), ExtResource( 51 ), ExtResource( 40 ), ExtResource( 50 ), ExtResource( 46 ) ],
"loop": true,
"name": "andando",
"speed": 10.0
} ]

[sub_resource type="GDScript" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="Animation" id=4]
resource_name = "parada"

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="StyleBoxFlat" id=8]

[sub_resource type="StyleBoxFlat" id=9]

[sub_resource type="Theme" id=10]

[sub_resource type="BitmapFont" id=11]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 67 ) ],
"loop": true,
"name": "sentado",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
position = Vector2( 2, -4 )
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
format = 1

[node name="sala" type="Sprite" parent="TileMap"]
position = Vector2( 509.264, 304.075 )
scale = Vector2( 0.373039, 0.396145 )
texture = ExtResource( 22 )

[node name="kid" type="KinematicBody2D" parent="."]
position = Vector2( 461, 464 )
script = ExtResource( 1 )

[node name="animacao" type="AnimatedSprite" parent="kid"]
position = Vector2( 3.12134, -13.4351 )
scale = Vector2( 0.234124, 0.168626 )
z_index = 2
frames = SubResource( 1 )
animation = "andando"
frame = 3
playing = true
flip_h = true
script = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="kid"]
shape = SubResource( 3 )

[node name="anim" type="AnimationPlayer" parent="kid"]
anims/parada = SubResource( 4 )

[node name="mesa" type="Sprite" parent="."]
position = Vector2( 723.837, 507.055 )
scale = Vector2( 0.398104, 0.355193 )
z_index = 3
texture = ExtResource( 41 )

[node name="Timer" type="Timer" parent="."]

[node name="Button" type="Button" parent="."]
margin_left = 236.0
margin_top = 549.0
margin_right = 339.0
margin_bottom = 595.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0, 0.188235, 0.380392, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Leia um Livro"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionCadeira" type="Position2D" parent="."]
position = Vector2( 466, 494 )

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 646.396
margin_top = 540.975
margin_right = 798.396
margin_bottom = 593.975
text = "Próximo nivel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="doutor positivo" type="Sprite" parent="."]
position = Vector2( 118.087, 441.234 )
scale = Vector2( 0.229254, 0.24394 )
texture = ExtResource( 63 )
flip_h = true

[node name="realBalao" type="Sprite" parent="."]
position = Vector2( 247.705, 271.429 )
scale = Vector2( 0.415625, 0.289216 )
texture = ExtResource( 65 )
script = ExtResource( 66 )

[node name="DialogBox" type="NinePatchRect" parent="realBalao"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0.0196078, 0, 0, 0 )
margin_left = -242.0
margin_top = -240.0
margin_right = 249.0
margin_bottom = 80.0
theme = SubResource( 10 )
script = ExtResource( 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="realBalao/DialogBox"]
margin_left = -16.3759
margin_top = 15.5424
margin_right = 152.624
margin_bottom = 116.542
rect_scale = Vector2( 3, 3 )
custom_fonts/bold_italics_font = SubResource( 11 )
text = "Teste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="corpo" type="KinematicBody2D" parent="."]
visible = false
z_index = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="corpo"]
position = Vector2( 655.5, 487.5 )
scale = Vector2( 0.365, 0.289286 )
frames = SubResource( 12 )
animation = "sentado"

[node name="quadro" type="Sprite" parent="."]
visible = false
position = Vector2( 514, 289.5 )
scale = Vector2( 0.781132, 0.724843 )
z_index = 4
texture = ExtResource( 68 )

[node name="CheckBox" type="CheckBox" parent="quadro"]
margin_left = -442.0
margin_top = -249.701
margin_right = -333.0
margin_bottom = -223.701
rect_scale = Vector2( 5, 5 )
text = "Doido"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
